# shadow-swap

./: .gitignore  README.md
backend/: Cargo.toml  cors.sh  diesel.toml  docker-compose.yml
backend/src/: main.rs
backend/src/api/: helpers.rs  mod.rs  routes.rs
backend/src/config/: config.rs  config_scope.rs  mod.rs  model.rs
backend/src/crypto/: merkle_tree.rs  mod.rs  model.rs  poseidon.rs  range_proof.rs
backend/src/database/: alter_tables.sql  database.rs  model.rs
backend/src/database/migrations/2025-11-18-223529_swap_pairs_table/: down.sql  up.sql
backend/src/database/migrations/2025-11-18-223602_htlc_events_table/: down.sql  up.sql
backend/src/database/migrations/2025-11-18-223641_processed_blocks_table/: down.sql  up.sql
backend/src/database/migrations/2025-11-24-153259_create_zcash_htlcs_table/: down.sql  up.sql
backend/src/database/migrations/2025-11-24-163350_create_indexer_checkpoints_table/: up.sql
backend/src/merkle_tree/: merkle_manager.rs  mod.rs  model.rs
backend/src/models/: mod.rs  models.rs  schema.rs  types.rs
backend/src/pricefeed/: pricefeed.rs
backend/src/relay_coordinator/: mod.rs  model.rs  relay_coordinator.rs  secret_monitor.rs
backend/src/starknet/: relayer.rs
backend/src/zcash/: mod.rs  model.rs  relayer.rs  relayer_transparent.rs  relayer_transparent_full.rs  script.rs
backend/src/zcash/indexer/: htlc_indexer.rs  mod.rs  model.rs
