[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "relayer"
path = "src/main.rs"

[[bin]]
name = "zcash-indexer"
path = "src/bin/zcash_indexer.rs"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono", "uuid", "numeric", "serde_json"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
hex = "0.4"
sha2 = "0.10"
toml = "0.8"
r2d2 = "0.8"
log = "0.4"
dotenv = "0.15"
anyhow = "1.0"
hmac = "0.12.1"

ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-bn254 = "0.4"
bulletproofs = "4.0"
merlin = "3.0"
curve25519-dalek = "4.1"
sha3 = "0.10"

stwo = { git = "https://github.com/starkware-libs/stwo", features = ["parallel"] }

# For Merkle tree
rs_merkle = "1.4"

# Starknet dependencies
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }
account_sdk = { git = "https://github.com/cartridge-gg/controller-rs.git", package = "account_sdk", tag = "v0.3.4" }
rand = "0.9.2"

[patch.crates-io]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }
starknet-accounts = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }
starknet-providers = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }
starknet-core = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }
starknet-signers = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }
starknet-contract = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
