[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono", "uuid", "numeric", "serde_json"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
url = "2.5"
hex = "0.4"
sha2 = "0.10"
toml = "0.8"
r2d2 = "0.8"
log = "0.4"
dotenv = "0.15"
anyhow = "1.0"
hmac = "0.12.1"
futures = "0.3"

# Arkworks ecosystem - sufficient for all cryptographic operations
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-bn254 = "0.4"
sha3 = "0.10"
bs58 = "0.5"
jubjub = "0.10"
bls12_381 = "0.8"
rand_core = "0.6"
redjubjub = "0.7"
secp256k1 = "0.29"

# For Merkle tree
rs_merkle = "1.4"

zcash_transparent = { git = "https://github.com/zcash/librustzcash.git", features = ["transparent-inputs"] }
zcash_primitives = { git = "https://github.com/zcash/librustzcash.git" }
zcash_protocol = { git = "https://github.com/zcash/librustzcash.git" }

# Starknet dependencies
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }
account_sdk = { git = "https://github.com/cartridge-gg/controller-rs.git", package = "account_sdk", tag = "v0.3.6" }
rand = "0.9.2"
zcash-htlc-builder = "0.1.5"

[patch.crates-io]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }
starknet-accounts = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }
starknet-providers = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }
starknet-core = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }
starknet-signers = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }
starknet-contract = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
